syntax = "proto3";

option go_package = "user";

package user;

message LoginByPasswordReq {
  string username = 1;
  string password = 2;
  string session_id = 3;
  string device = 4;
}

message LoginByMobileReq {
  string mobile = 1;
  string captcha = 2;
  string session_id = 3;
  string device = 4;
}

message LoginRes {
  string token = 1;
  int64 expire = 2;
}
message SendCaptchaReq {
  string session_id = 1;
  string mobile = 2;
  string device = 3;
}
message SendCaptchaRes {
  bool success = 1;
}

// 组信息
message GroupInfo{
  int64 id = 1;
  string uuid = 2;
  int64 parent_id = 3;
  int64 level = 4;
  string name = 5;
  string intro = 6;
}

// 用户信息
message UserInfo{
  int64 id = 1;
  string uuid = 2;
  string username = 3;
  string mobile = 4;
  string avatar = 5;
}

service UserSrv {
  // 用户名密码登录
  rpc LoginByPassword (LoginByPasswordReq) returns (LoginRes);
  // 手机验证码登录
  rpc LoginByMobile (LoginByMobileReq) returns (LoginRes);
  // 发送验证码
  rpc SendCaptcha (SendCaptchaReq) returns (SendCaptchaRes);
}
